editor-components/logo-clouds/logo-comp7/logo-comp7.module.scss
.container {
  .max-content {
    display: flex;
    flex-direction: column;
    gap: var(--composer-gap-xl);
    .heading {
      /*text-align: center;*/
      display: inline-flex;
      flex-direction: column;

      /* center the box in its flex container */
      align-self: center;

      /* center text inside */
      text-align: center;
      .title {
        content: "";
        font-size: 1.5rem;
      }
    }

    .images-container {
      .image-item {
        background: color-mix(
          in srgb,
          var(--composer-html-background),
          var(--composer-font-color-primary) 5%
        );
        padding: var(--composer-gap-md);
        border-radius: var(--composer-border-radius-sm);
        .image {
          object-fit: contain;
          width: 100%;
          height: 90px;
        }
      }
    }
  }
}

